# upgrade-anemoi-assets

./: Cargo.toml  PrismXXAsset.abi.json
src/: main.rs
